[package]
name = "x86_testbench"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A Simple x86 Testbench / nanokernel, containg a basic serial logger & test framework runner"
categories = ["development-tools::testing", "no-std", "development-tools::testing"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
ext_panic = []


[dependencies]
bootloader = "0.9.0"
uart_16550 = "0.2.15"
spin = {version = "0.9.0"}
x86_64 = "0.14.4"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]


[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"
]
test-success-exit-code = 33        # (0x00 << 1) | 1
